kubernetes/apps/default/watchstate/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchstate
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: watchstate
      app.kubernetes.io/instance: watchstate
      app.kubernetes.io/controller: watchstate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: watchstate
        app.kubernetes.io/instance: watchstate
        app.kubernetes.io/controller: watchstate
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/arabcoders/watchstate:v1.0.9
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe: *probe
          resources:
            requests:
              cpu: 750m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: watchstate
        - name: tmp
          emptyDir: {}
