kubernetes/apps/default/watchstate/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchstate
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: watchstate
    app.kubernetes.io/instance: watchstate
    app.kubernetes.io/controller: watchstate
