kubernetes/apps/default/watchstate/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: watchstate
  namespace: default
  labels:
    app.kubernetes.io/name: watchstate
    app.kubernetes.io/instance: watchstate
    app.kubernetes.io/controller: watchstate
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["len([BODY]) == 0"]
      group: internal
      dns:
        query-name: watchstate.unscfleet.com
        query-type: A
      url: 1.1.1.1
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - watchstate.unscfleet.com
  rules:
    - backendRefs:
        - name: watchstate
          port: 8080
